# Finance_knowledge_RAG_based_Chatbot

./: .env  README.md  Rag.ipynb  app.py  pyproject.toml
