[tool.poetry]
name = "rag-based-finance-knowledge-bot"
version = "0.1.0"
description = ""
authors = ["Sameer Ahmad <samimughal7786@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
llama-index = "^0.10.18"
llama-index-llms-groq = "^0.1.3"
chainlit="^1.0.401"
groq = "^0.4.2"
python-dotenv = "^1.0.1"
llama-index-embeddings-gemini="^0.1.4"
llama-index-postprocessor-cohere-rerank="^0.1.2"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
